--- a/index.html
+++ b/index.html
@@ -7,9 +7,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="shortcut icon" href="assets/images/devchallenges.png" type="image/x-icon">
   <link rel="stylesheet" href="assets/css/style.css">
-  <link
-    href="https://fonts.googleapis.com/css?family=Material+Icons|Material+Icons+Outlined|Material+Icons+Two+Tone|Material+Icons+Round|Material+Icons+Sharp"
-    rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Material+Icons|Material+Icons+Outlined" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@600&display=swap" rel="stylesheet">
   <title>Checkout Page Master</title>
 </head>
 
@@ -121,7 +122,7 @@
               </div>
               <div class="input-field">
                 <label for="postalcode">Postal Code</label>
-                <input type="text" name="postalcode" placeholder="Your postal code" required>
+                <input type="text" name="postalcode" placeholder="Postal code" required>
                 <span class="material-icons">markunread_mailbox</span>
               </div>
             </div>
